notification alignment issue

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1376,6 +1376,10 @@ p.sub_text:after{
 .notification_view .img-holder {
   float: left;
   margin-right: 10px;
+  margin-top: 4px;
+}
+.notification_view .text-holder a:hover p {
+  opacity: 0.7;
 }
 .notification_view .text-holder {
   text-align: left;
